# Snake

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Color.cpp  Color.h  Constants.h  Food.cpp  Food.h  Game.cpp  Game.h  GameState.cpp  GameState.h  GameStateDummy.cpp  GameStateDummy.h  GameStatePlaying.cpp  GameStatePlaying.h  Graphics.cpp  Graphics.h  Image.cpp  Makefile  README.md  Snake.cpp  Snake.h  SnakePart.h  Stopwatch.cpp  Stopwatch.h  Text.h  main.cpp
Client/: Application.cpp  Application.h  CMakeLists.txt  DataFromServer.cpp  DataToServer.cpp  DataToServer.h  Food.h  Game.cpp  Game.h  GameState.cpp  GameState.h  GameStateDummy.cpp  GameStateDummy.h  GameStateMenu.cpp  GameStateMenu.h  GameStatePlaying.cpp  GameStatePlaying.h  Graphics.cpp  Graphics.h  Image.h  Server.h  Snake.h  Stopwatch.h  Text.cpp  Text.h  Utilities.h  Window.cpp  Window.h
Client/Display/: Color.h  Font.cpp  Font.h  Graphics.cpp  Graphics.h  Input.h  Text.cpp  Text.h  Window.cpp  Window.h
Client/GameObjects/: Food.h  GameSpace.cpp  GameSpace.h  Snake.h
Client/GameStates/: GameState.cpp  GameState.h  GameStateDraw.cpp  GameStateDraw.h  GameStateDummy.cpp  GameStateLose.cpp  GameStateLose.h  GameStateMenu.cpp  GameStateMenu.h  GameStatePlaying.cpp  GameStatePlaying.h  GameStateSelectIPAndPort.cpp  GameStateSelectIPAndPort.h  GameStateTryToConnect.cpp  GameStateTryToConnect.h  GameStateWin.cpp  GameStateWin.h
Client/Utility/: KeyPresses.cpp  KeyPresses.h
Server/: Application.cpp  Application.h  CMakeLists.txt  Client.h  DataToClient.cpp  DataToClient.h  Game.cpp  Game.h  main.cpp
Server/GameObjects/: Food.h  GameSpace.h  Snake.h
Server/ServerStates/: ServerState.cpp  ServerState.h  ServerStatePlayingGame.cpp  ServerStatePlayingGame.h  ServerStateWaitingForPlayers.cpp  ServerStateWaitingForPlayers.h
Server/Utility/: Stopwatch.cpp  Stopwatch.h
Shared/: DataFromClient.cpp  DataFromClient.h  DataFromServer.h
(+5 files in other folders)
